fdkaac: fix mixup setting interleaved output

https://bugzilla.gnome.org/show_bug.cgi?id=770455